<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_classification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="group4.swastikroy.com.heart_rate_monitor_demo.ui.ClassificationActivity">
    <Button
        android:id="@+id/train_model"
        style="@style/HomeBtn"
        android:text="@string/train_model" />
    <Button
        android:id="@+id/test_model"
        style="@style/HomeBtn"
        android:text="@string/test_model" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Accuracy"
        android:text="@string/accuracy_view"/>
    <Button
        android:id="@+id/Calculate_accuracy"
        style="@style/HomeBtn"
        android:text="@string/calculate_accuracy" />

</LinearLayout>
