<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_data_collection_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="group4.swastikroy.com.heart_rate_monitor_demo.ui.DataCollectionListActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="20dp"
        android:text="Select Activity Type"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/heading_color"
        android:textSize="@dimen/splash_title_size"
        android:paddingLeft="7dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/jump_button"
        style="@style/HomeBtn"
        android:drawableRight="@drawable/jump"
        android:text="@string/jump_button" />

    <Button
        android:id="@+id/walk_button"
        style="@style/HomeBtn"
        android:drawableRight="@drawable/walk"
        android:text="@string/walk_button" />

    <Button
        android:id="@+id/run_button"
        style="@style/HomeBtn"
        android:drawableRight="@drawable/run"
        android:text="@string/run_button" />

</LinearLayout>
